--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "blog/base.html" %}
 
-</body>
-</html>
+{% block title %}Мой блог{% endblock %}
+{% block content %}
+    <h1>
+        Мой блог
+    </h1>
+    {% for post in posts %}
+        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        <p class="date">Опубликовано {{ post.publish }},
+            Автор: {{ post.author }}</p>
+        {{ post.body|truncatewords:30|linebreaks }}
+    {% endfor %}
+    {% include "pagination.html" with page=page_obj %}
+{% endblock %}
