add comments model and form

--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -14,10 +14,10 @@
 </div>
 <div id="sidebar">
     <h2>
-        Blog
+        MineBlog.com
     </h2>
     <p>
-        Это блог, да!
+        Добро пожаловать!
     </p>
 </div>
 </body>
