--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -1,6 +1,7 @@
 {% extends "blog/base.html" %}
 
 {% block title %}{{ post.title }}{% endblock %}
+
 {% block content %}
     <h1>
         {{ post.title }}
@@ -8,5 +9,8 @@
     <p class="date">Опубликовано {{ post.publish }}, Автор: {{ post.author }}</p>
     <p>
         {{ post.body|linebreaks }}
+    </p>
+    <p>
+        <a href="{% url "blog:post_share" post.pk %}">Поделиться!</a>
     </p>
 {% endblock %}
