--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -11,6 +11,40 @@
         {{ post.body|linebreaks }}
     </p>
     <p>
-        <a href="{% url "blog:post_share" post.pk %}">Поделиться!</a>
+        <a href="{% url "blog:post_share" post.id %}">Поделиться!</a>
     </p>
+    {% with comments.count as total_comments %}
+        <h2>
+            {{ total_comments }} comment{{ total_comments|pluralize }}
+        </h2>
+    {% endwith %}
+    {% for comment in comments %}
+        <div class="comment">
+            <p class="info">
+                Комментарий {{ forloop.counter }} от {{ comment.name }}
+                {{ comment.created }}
+            </p>
+            {{ comment.body|linebreaks }}
+        </div>
+    {% empty %}
+        <p>
+            Пока комментариев нет
+        </p>
+    {% endfor %}
+    {% if new_comment %}
+        <p>
+            Ваш комментарий был добавлен!
+        </p>
+    {% else %}
+        <h2>
+            Добавить комментарий:
+        </h2>
+        <form action="" method="post">
+            {{ comment_form.as_p }}
+            {% csrf_token %}
+            <p>
+                <input type="submit" value="Добавить комментарий">
+            </p>
+        </form>
+    {% endif %}
 {% endblock %}
