--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -7,6 +7,7 @@
     </h1>
     {% for post in posts %}
         <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        <p class="tags">Теги: {{ post.tags.all|join:", " }}</p>
         <p class="date">Опубликовано {{ post.publish }},
             Автор: {{ post.author }}</p>
         {{ post.body|truncatewords:30|linebreaks }}
