--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -18,6 +18,20 @@
             {{ total_comments }} comment{{ total_comments|pluralize }}
         </h2>
     {% endwith %}
+    {% if similar_posts %}
+        <p>
+            Похожии статьи:
+        </p>
+        {% for post in similar_posts %}
+            <p>
+                <a href=" {% url "blog:post_detail" year=post.created.year month=post.created.month day=post.created.day post=post.slug %}">{{ post.title }}</a>
+            </p>
+        {% endfor %}
+    {% else %}
+        <p>
+            Похожих статей не найдено.
+        </p>
+    {% endif %}
     {% for comment in comments %}
         <div class="comment">
             <p class="info">
