--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -5,12 +5,24 @@
     <h1>
         Мой блог
     </h1>
+    {% if tag %}
+        <h2>
+            У поста есть тег "{{ tag.name }}"
+        </h2>
+    {% endif %}
     {% for post in posts %}
         <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-        <p class="tags">Теги: {{ post.tags.all|join:", " }}</p>
+        <p class="tags">Теги:
+            {% for tag in post.tags.all %}
+                <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+                    {{ tag.name }}
+                </a>
+                {% if not forloop.last %}, {% endif %}
+            {% endfor %}
+        </p>
         <p class="date">Опубликовано {{ post.publish }},
             Автор: {{ post.author }}</p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
-    {% include "pagination.html" with page=page_obj %}
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
