--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 
@@ -19,6 +20,24 @@
     <p>
         Добро пожаловать!
     </p>
+    <p>
+        Статей написано: {% total_posts %}
+    </p>
+    <h3>
+        Последние статьи:
+    </h3>
+    {% show_latest_posts 2 %}
+    <h3>
+        Самые комментируемые статьи:
+    </h3>
+    {% get_most_commented_posts as most_commented_posts %}
+    <ul>
+        {% for post in most_commented_posts %}
+            <li>
+                <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+            </li>
+        {% endfor %}
+    </ul>
 </div>
 </body>
 </html>
