working sitemap + rss

--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -23,6 +23,9 @@
     <p>
         Статей написано: {% total_posts %}
     </p>
+    <p>
+        <a href="{% url "blog:post_feed" %}">Подписаться на RSS рассылку</a>
+    </p>
     <h3>
         Последние статьи:
     </h3>
