--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -15,7 +15,7 @@
 </div>
 <div id="sidebar">
     <h2>
-        MineBlog.com
+        MineBlog.com (<a href="{% url "blog:post_list" %}">На главную</a>)
     </h2>
     <p>
         Добро пожаловать!
